# AutoCADReader

./: .gitignore  CMakeLists.txt  DwgObject.cpp  DwgObject.h  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  main.cpp  ui_mainwindow.h
dataset/: sample_2000.dwg
lib/: libdxfrw.idb
libdxfrw/: dx_iface.cpp  dx_iface.h
